# ros2_ws_er

./: DevelopmentGuide.md  README.md
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: my_first_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py
